# new_drission

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  多模态滚动架构计划书.md
app/: __init__.py  cli.py  config.py
app/core/: __init__.py  schema.py
app/debugger/: __init__.py  rollback.py
app/generation/: __init__.py  agent_loop.py  state_updater.py  step_decider.py  task_parser.py
app/llm/: __init__.py  client.py
app/recovery/: outcome_checker.py
app/resilience/: __init__.py  executor.py
app/runtime/: __init__.py  base.py  drission.py  static.py
app/script/: __init__.py  debugger.py  recorder.py  runner.py
app/trace/: __init__.py  recorder.py
examples/tasks/: 123apps_video_edit.txt  clideo_video_edit.txt
scripts/: record_screen.sh  run_123apps_demo.sh  run_agent.sh  run_clideo_demo.sh  show_downloads.sh
tests/: test_agent_loop_batch_policy.py  test_agent_loop_recovery.py  test_agent_loop_result_safety.py  test_debugger_recovery_strategy.py  test_llm_client.py  test_llm_timeouts.py  test_outcome_checker.py  test_premature_finalizing_guard.py  test_resilience_executor.py  test_script_debugger.py  test_script_recorder.py  test_state_update_gate.py  test_state_updater.py  test_step_decider.py  test_task_parser.py
